uploaded new files

--- a/Natural Language Processing with Classification and Vector Spaces/Week 1/Python Notebooks/C1_W1_Assignment.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 1/Python Notebooks/C1_W1_Assignment.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,14 +768,14 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    \n",
     "    # loop through each word in the list of words\n",
     "    for word in word_l:\n",
-    "        \n",
     "        # increment the word count for the positive label 1\n",
-    "        x[1] += None\n",
+    "        x[1] += freqs.get((word,1.0),0.0)\n",
     "        \n",
     "        # increment the word count for the negative label 0\n",
-    "        x[2] += None\n",
+    "        x[2] += freqs.get((word,0.0),0.0)\n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -786,9 +786,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.000e+00 3.133e+03 6.100e+01]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check your function\n",
     "# test 1\n",
@@ -809,9 +817,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# test 2:\n",
     "# check for when the words are not in the freqs dictionary\n",
@@ -831,9 +847,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_extract_features(extract_features, freqs)"
