uploaded new files

--- a/Natural Language Processing with Classification and Vector Spaces/Week 1/Python Notebooks/C1_W1_Logistic_Regression_Assignment.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 1/Python Notebooks/C1_W1_Logistic_Regression_Assignment.ipynb
@@ -879,9 +879,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost after training is 0.22522315.\n",
+      "The resulting vector of weights is [6e-08, 0.00053818, -0.0005583]\n"
+     ]
+    }
+   ],
    "source": [
     "# collect the features 'x' and stack them into a matrix 'X'\n",
     "X = np.zeros((len(train_x), 3))\n",
@@ -931,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,10 +957,10 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # extract the features of the tweet and store it into x\n",
-    "    x = None\n",
+    "    x = extract_features(tweet, freqs, process_tweet=process_tweet)\n",
     "    \n",
     "    # make the prediction using x and theta\n",
-    "    y_pred = None\n",
+    "    y_pred = sigmoid(np.dot(x,theta))\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -960,9 +969,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am happy -> 0.519275\n",
+      "I am bad -> 0.494347\n",
+      "this movie should have been great. -> 0.515979\n",
+      "great -> 0.516065\n",
+      "great great -> 0.532096\n",
+      "great great great -> 0.548062\n",
+      "great great great great -> 0.563929\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to test your function\n",
     "for tweet in ['I am happy', 'I am bad', 'this movie should have been great.', 'great', 'great great', 'great great great', 'great great great great']:\n",
@@ -988,9 +1011,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.83110307]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to check the sentiment of your own tweet below\n",
     "my_tweet = 'I am learning :)'\n",
@@ -999,9 +1033,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.test_predict_tweet(predict_tweet, freqs, theta)"
@@ -1042,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,12 +1102,14 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    \n",
+    "    m,_=test_y.shape\n",
+    "    \n",
     "    # the list for storing predictions\n",
-    "    y_hat = None\n",
+    "    y_hat = []\n",
     "    \n",
     "    for tweet in test_x:\n",
     "        # get the label prediction for the tweet\n",
-    "        y_pred = None\n",
+    "        y_pred = predict_tweet(tweet,freqs,theta)\n",
     "        \n",
     "        if y_pred > 0.5:\n",
     "            # append 1.0 to the list\n",
@@ -1076,7 +1120,7 @@
     "\n",
     "    # With the above implementation, y_hat is a list, but test_y is (m,1) array\n",
     "    # convert both to one-dimensional arrays in order to compare them using the '==' operator\n",
-    "    accuracy = None\n",
+    "    accuracy = np.sum(np.asarray(y_hat)==np.squeeze(test_y))/m\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1085,9 +1129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic regression model's accuracy = 0.9950\n"
+     ]
+    }
+   ],
    "source": [
     "tmp_accuracy = test_logistic_regression(test_x, test_y, freqs, theta)\n",
     "print(f\"Logistic regression model's accuracy = {tmp_accuracy:.4f}\")"
@@ -1104,9 +1156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w1_unittest.unittest_test_logistic_regression(test_logistic_regression, freqs, theta)"
@@ -1124,9 +1184,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label Predicted Tweet\n",
+      "THE TWEET IS: @MarkBreech Not sure it would be good thing 4 my bottom daring 2 say 2 Miss B but Im gonna be so stubborn on mouth soaping ! #NotHavingit :p\n",
+      "THE PROCESSED TWEET IS: ['sure', 'would', 'good', 'thing', '4', 'bottom', 'dare', '2', 'say', '2', 'miss', 'b', 'im', 'gonna', 'stubborn', 'mouth', 'soap', 'nothavingit', ':p']\n",
+      "1\t0.48901497\tb'sure would good thing 4 bottom dare 2 say 2 miss b im gonna stubborn mouth soap nothavingit :p'\n",
+      "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots\n",
+      "http://t.co/UGQzOx0huu\n",
+      "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
+      "1\t0.48418949\tb\"i'm play brain dot braindot\"\n",
+      "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots http://t.co/aOKldo3GMj http://t.co/xWCM9qyRG5\n",
+      "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
+      "1\t0.48418949\tb\"i'm play brain dot braindot\"\n",
+      "THE TWEET IS: I'm playing Brain Dots : ) #BrainDots http://t.co/R2JBO8iNww http://t.co/ow5BBwdEMY\n",
+      "THE PROCESSED TWEET IS: [\"i'm\", 'play', 'brain', 'dot', 'braindot']\n",
+      "1\t0.48418949\tb\"i'm play brain dot braindot\"\n",
+      "THE TWEET IS: off to the park to get some sunlight : )\n",
+      "THE PROCESSED TWEET IS: ['park', 'get', 'sunlight']\n",
+      "1\t0.49636374\tb'park get sunlight'\n",
+      "THE TWEET IS: @msarosh Uff Itna Miss karhy thy ap :p\n",
+      "THE PROCESSED TWEET IS: ['uff', 'itna', 'miss', 'karhi', 'thi', 'ap', ':p']\n",
+      "1\t0.48237069\tb'uff itna miss karhi thi ap :p'\n",
+      "THE TWEET IS: @phenomyoutube u probs had more fun with david than me : (\n",
+      "THE PROCESSED TWEET IS: ['u', 'prob', 'fun', 'david']\n",
+      "0\t0.50988239\tb'u prob fun david'\n",
+      "THE TWEET IS: pats jay : (\n",
+      "THE PROCESSED TWEET IS: ['pat', 'jay']\n",
+      "0\t0.50040365\tb'pat jay'\n",
+      "THE TWEET IS: my beloved grandmother : ( https://t.co/wt4oXq5xCf\n",
+      "THE PROCESSED TWEET IS: ['belov', 'grandmoth']\n",
+      "0\t0.50000002\tb'belov grandmoth'\n",
+      "THE TWEET IS: Sr. Financial Analyst - Expedia, Inc.: (#Bellevue, WA) http://t.co/ktknMhvwCI #Finance #ExpediaJobs #Job #Jobs #Hiring\n",
+      "THE PROCESSED TWEET IS: ['sr', 'financi', 'analyst', 'expedia', 'inc', 'bellevu', 'wa', 'financ', 'expediajob', 'job', 'job', 'hire']\n",
+      "0\t0.50648681\tb'sr financi analyst expedia inc bellevu wa financ expediajob job job hire'\n"
+     ]
+    }
+   ],
    "source": [
     "# Some error analysis done for you\n",
     "print('Label Predicted Tweet')\n",
@@ -1156,9 +1255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ridicul', 'bright', 'movi', 'plot', 'terribl', 'sad', 'end']\n",
+      "[[0.48125423]]\n",
+      "Negative sentiment\n"
+     ]
+    }
+   ],
    "source": [
     "# Feel free to change the tweet below\n",
     "my_tweet = 'This is a ridiculously bright movie. The plot was terrible and I was sad until the ending!'\n",
@@ -1170,6 +1279,13 @@
     "else: \n",
     "    print('Negative sentiment')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
