uploaded new files

--- a/Natural Language Processing with Classification and Vector Spaces/Week 2/Python Notebooks/C1_W2_Naive_Bayes.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 2/Python Notebooks/C1_W2_Naive_Bayes.ipynb
@@ -630,20 +630,20 @@
     "    '''\n",
     "    ### START CODE HERE ###\n",
     "    # process the tweet to get a list of words\n",
-    "    word_l = None\n",
+    "    word_l = process_tweet(tweet)\n",
     "\n",
     "    # initialize probability to zero\n",
-    "    p = None\n",
+    "    p = 0\n",
     "\n",
     "    # add the logprior\n",
-    "    p += None\n",
+    "    p += logprior\n",
     "\n",
     "    for word in word_l:\n",
     "\n",
     "        # check if the word exists in the loglikelihood dictionary\n",
     "        if word in loglikelihood:\n",
     "            # add the log likelihood of that word to the probability\n",
-    "            p += None\n",
+    "            p += loglikelihood[word]\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -659,15 +659,10 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'NoneType' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-ab85e9c1b095>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# UNQ_C5 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmy_tweet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'She smiled.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnaive_bayes_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_tweet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlogprior\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloglikelihood\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The expected output is'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-d8c50195ceef>\u001b[0m in \u001b[0;36mnaive_bayes_predict\u001b[0;34m(tweet, logprior, loglikelihood)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;31m# add the logprior\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mp\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mword_l\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'NoneType' and 'NoneType'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The expected output is 1.5577981920239676\n"
      ]
     }
    ],
@@ -689,9 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w2_unittest.test_naive_bayes_predict(naive_bayes_predict)"
@@ -699,9 +702,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The expected output is -0.1649684057171359\n"
+     ]
+    }
+   ],
    "source": [
     "# Experiment with your own tweet.\n",
     "my_tweet = 'He laughed.'\n",
@@ -726,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,24 +756,24 @@
     "    accuracy = 0  # return this properly\n",
     "\n",
     "    ### START CODE HERE ###\n",
-    "    y_hats = None\n",
+    "    y_hats = []\n",
     "    for tweet in test_x:\n",
     "        # if the prediction is > 0\n",
     "        if naive_bayes_predict(tweet, logprior, loglikelihood) > 0:\n",
     "            # the predicted class is 1\n",
-    "            y_hat_i = None\n",
+    "            y_hat_i = 1\n",
     "        else:\n",
     "            # otherwise the predicted class is 0\n",
-    "            y_hat_i = None\n",
+    "            y_hat_i = 0\n",
     "\n",
     "        # append the predicted class to the list y_hats\n",
     "        y_hats.append(y_hat_i)\n",
     "\n",
     "    # error is the average of the absolute values of the differences between y_hats and test_y\n",
-    "    error = None\n",
+    "    error = np.mean(np.abs(y_hats-test_y))\n",
     "\n",
     "    # Accuracy is 1 minus the error\n",
-    "    accuracy = None\n",
+    "    accuracy = 1-error\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -771,9 +782,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes accuracy = 0.9955\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Naive Bayes accuracy = %0.4f\" %\n",
     "      (test_naive_bayes(test_x, test_y, logprior, loglikelihood)))"
@@ -790,13 +809,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am happy -> 2.14\n",
+      "I am bad -> -1.31\n",
+      "this movie should have been great. -> 2.12\n",
+      "great -> 2.13\n",
+      "great great -> 4.26\n",
+      "great great great -> 6.39\n",
+      "great great great great -> 8.52\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C7 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# Run this cell to test your function\n",
@@ -823,9 +856,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8.837351738825648"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Feel free to check the sentiment of your own tweet below\n",
     "my_tweet = 'you are bad :('\n",
@@ -834,9 +878,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w2_unittest.unittest_test_naive_bayes(test_naive_bayes, test_x, test_y)"
@@ -928,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,31 +997,50 @@
     "    pos_neg_ratio = {'positive': 0, 'negative': 0, 'ratio': 0.0}\n",
     "    ### START CODE HERE ###\n",
     "    # use lookup() to find positive counts for the word (denoted by the integer 1)\n",
-    "    pos_neg_ratio['positive'] = None\n",
+    "    pos_neg_ratio['positive'] = lookup(freqs,word,1)\n",
     "    \n",
     "    # use lookup() to find negative counts for the word (denoted by integer 0)\n",
-    "    pos_neg_ratio['negative'] = None\n",
+    "    pos_neg_ratio['negative'] = lookup(freqs,word,0)\n",
     "    \n",
     "    # calculate the ratio of positive to negative counts for the word\n",
-    "    pos_neg_ratio['ratio'] = (None) / (None)\n",
+    "    pos_neg_ratio['ratio'] = (pos_neg_ratio['positive']+1) / (pos_neg_ratio['negative']+1)\n",
     "    ### END CODE HERE ###\n",
     "    return pos_neg_ratio\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'positive': 162, 'negative': 18, 'ratio': 8.578947368421053}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_ratio(freqs, 'happi')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w2_unittest.test_get_ratio(get_ratio, freqs)"
@@ -997,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,22 +1091,22 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    for key in freqs.keys():\n",
-    "        word, _ = None\n",
+    "        word, _ = key\n",
     "\n",
     "        # get the positive/negative ratio for a word\n",
-    "        pos_neg_ratio = None\n",
+    "        pos_neg_ratio = get_ratio(freqs,word)\n",
     "\n",
     "        # if the label is 1 and the ratio is greater than or equal to the threshold...\n",
     "        if label == 1 and pos_neg_ratio['ratio'] >= threshold:\n",
     "        \n",
     "            # Add the pos_neg_ratio to the dictionary\n",
-    "            word_list[word] = None\n",
+    "            word_list[word] = pos_neg_ratio\n",
     "\n",
     "        # If the label is 0 and the pos_neg_ratio is less than or equal to the threshold...\n",
     "        elif label == 0 and pos_neg_ratio['ratio'] <= threshold:\n",
     "        \n",
     "            # Add the pos_neg_ratio to the dictionary\n",
-    "            word_list[word] = None\n",
+    "            word_list[word] = pos_neg_ratio\n",
     "\n",
     "        # otherwise, do not include this word in the list (do nothing)\n",
     "\n",
@@ -1045,9 +1116,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{':(': {'positive': 1, 'negative': 3675, 'ratio': 0.000544069640914037},\n",
+       " ':-(': {'positive': 0, 'negative': 386, 'ratio': 0.002583979328165375},\n",
+       " 'zayniscomingbackonjuli': {'positive': 0, 'negative': 19, 'ratio': 0.05},\n",
+       " '26': {'positive': 0, 'negative': 20, 'ratio': 0.047619047619047616},\n",
+       " '>:(': {'positive': 0, 'negative': 43, 'ratio': 0.022727272727272728},\n",
+       " 'lost': {'positive': 0, 'negative': 19, 'ratio': 0.05},\n",
+       " '♛': {'positive': 0, 'negative': 210, 'ratio': 0.004739336492890996},\n",
+       " '》': {'positive': 0, 'negative': 210, 'ratio': 0.004739336492890996},\n",
+       " 'beli̇ev': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776},\n",
+       " 'wi̇ll': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776},\n",
+       " 'justi̇n': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776},\n",
+       " 'ｓｅｅ': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776},\n",
+       " 'ｍｅ': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776}}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test your function: find negative words at or below a threshold\n",
     "get_words_by_threshold(freqs, label=0, threshold=0.05)"
@@ -1055,9 +1149,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'followfriday': {'positive': 23, 'negative': 0, 'ratio': 24.0},\n",
+       " 'commun': {'positive': 27, 'negative': 1, 'ratio': 14.0},\n",
+       " ':)': {'positive': 2960, 'negative': 2, 'ratio': 987.0},\n",
+       " 'flipkartfashionfriday': {'positive': 16, 'negative': 0, 'ratio': 17.0},\n",
+       " ':D': {'positive': 523, 'negative': 0, 'ratio': 524.0},\n",
+       " ':p': {'positive': 104, 'negative': 0, 'ratio': 105.0},\n",
+       " 'influenc': {'positive': 16, 'negative': 0, 'ratio': 17.0},\n",
+       " ':-)': {'positive': 552, 'negative': 0, 'ratio': 553.0},\n",
+       " \"here'\": {'positive': 20, 'negative': 0, 'ratio': 21.0},\n",
+       " 'youth': {'positive': 14, 'negative': 0, 'ratio': 15.0},\n",
+       " 'bam': {'positive': 44, 'negative': 0, 'ratio': 45.0},\n",
+       " 'warsaw': {'positive': 44, 'negative': 0, 'ratio': 45.0},\n",
+       " 'shout': {'positive': 11, 'negative': 0, 'ratio': 12.0},\n",
+       " ';)': {'positive': 22, 'negative': 0, 'ratio': 23.0},\n",
+       " 'stat': {'positive': 51, 'negative': 0, 'ratio': 52.0},\n",
+       " 'arriv': {'positive': 57, 'negative': 4, 'ratio': 11.6},\n",
+       " 'glad': {'positive': 41, 'negative': 2, 'ratio': 14.0},\n",
+       " 'blog': {'positive': 27, 'negative': 0, 'ratio': 28.0},\n",
+       " 'fav': {'positive': 11, 'negative': 0, 'ratio': 12.0},\n",
+       " 'fantast': {'positive': 9, 'negative': 0, 'ratio': 10.0},\n",
+       " 'fback': {'positive': 26, 'negative': 0, 'ratio': 27.0},\n",
+       " 'pleasur': {'positive': 10, 'negative': 0, 'ratio': 11.0},\n",
+       " '←': {'positive': 9, 'negative': 0, 'ratio': 10.0},\n",
+       " 'aqui': {'positive': 9, 'negative': 0, 'ratio': 10.0}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test your function; find positive words at or above a threshold\n",
     "get_words_by_threshold(freqs, label=1, threshold=10)"
@@ -1072,9 +1200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w2_unittest.test_get_words_by_threshold(get_words_by_threshold, freqs)"
@@ -1092,9 +1228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truth Predicted Tweet\n",
+      "1\t0.00\tb'truli later move know queen bee upward bound movingonup'\n",
+      "1\t0.00\tb'new report talk burn calori cold work harder warm feel better weather :p'\n",
+      "1\t0.00\tb'harri niall 94 harri born ik stupid wanna chang :D'\n",
+      "1\t0.00\tb'park get sunlight'\n",
+      "1\t0.00\tb'uff itna miss karhi thi ap :p'\n",
+      "0\t1.00\tb'hello info possibl interest jonatha close join beti :( great'\n",
+      "0\t1.00\tb'u prob fun david'\n",
+      "0\t1.00\tb'pat jay'\n",
+      "0\t1.00\tb'sr financi analyst expedia inc bellevu wa financ expediajob job job hire'\n"
+     ]
+    }
+   ],
    "source": [
     "# Some error analysis done for you\n",
     "print('Truth Predicted Tweet')\n",
@@ -1117,9 +1270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.571143871339594\n"
+     ]
+    }
+   ],
    "source": [
     "# Test with your own tweet - feel free to modify `my_tweet`\n",
     "my_tweet = 'I am happy because I am learning :)'\n",
