--- a/Natural Language Processing with Classification and Vector Spaces/Week 3/Python Notebooks/C1_W3_Assignment.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 3/Python Notebooks/C1_W3_Assignment.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,23 +601,23 @@
     "    ### START CODE HERE ###\n",
     "\n",
     "    # store the city1, country 1, and city 2 in a set called group\n",
-    "    group = None\n",
+    "    group = (city1,country1,city2)\n",
     "\n",
     "    # get embeddings of city 1\n",
-    "    city1_emb = None\n",
+    "    city1_emb = embeddings[city1]\n",
     "\n",
     "    # get embedding of country 1\n",
-    "    country1_emb = None\n",
+    "    country1_emb = embeddings[country1]\n",
     "\n",
     "    # get embedding of city 2\n",
-    "    city2_emb = None\n",
+    "    city2_emb = embeddings[city2]\n",
     "\n",
     "    # get embedding of country 2 (it's a combination of the embeddings of country 1, city 1 and city 2)\n",
     "    # Remember: King - Man + Woman = Queen\n",
-    "    vec = None\n",
+    "    vec = country1_emb-city1_emb+city2_emb\n",
     "\n",
     "    # Initialize the similarity to -1 (it will be replaced by a similarities that are closer to +1)\n",
-    "    similarity = None\n",
+    "    similarity = -1\n",
     "\n",
     "    # initialize country to an empty string\n",
     "    country = ''\n",
@@ -629,19 +629,19 @@
     "        if word not in group:\n",
     "\n",
     "            # get the word embedding\n",
-    "            word_emb = None\n",
+    "            word_emb = embeddings[word]\n",
     "\n",
     "            # calculate cosine similarity between embedding of country 2 and the word in the embeddings dictionary\n",
-    "            cur_similarity = None\n",
+    "            cur_similarity = cosine_similarity(word_emb,vec)\n",
     "\n",
     "            # if the cosine similarity is more similar than the previously best similarity...\n",
     "            if cur_similarity > similarity:\n",
     "\n",
     "                # update the similarity to the new, better similarity\n",
-    "                similarity = None\n",
+    "                similarity = cur_similarity\n",
     "\n",
     "                # store the country as a tuple, which contains the word and the similarity\n",
-    "                country = None\n",
+    "                country = (word,similarity)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -650,9 +650,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Egypt', 0.7626822)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Testing your function, note to make it more robust you can return the 5 most similar words.\n",
     "get_country('Athens', 'Greece', 'Cairo', word_embeddings)"
@@ -669,9 +680,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w3_unittest.test_get_country(get_country)"
@@ -710,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,36 +745,36 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    # initialize num correct to zero\n",
-    "    num_correct = None\n",
+    "    num_correct = 0\n",
     "\n",
     "    # loop through the rows of the dataframe\n",
     "    for i, row in data.iterrows():\n",
     "\n",
     "        # get city1\n",
-    "        city1 = None\n",
+    "        city1 = row['city1']\n",
     "\n",
     "        # get country1\n",
-    "        country1 = None\n",
+    "        country1 = row['country1']\n",
     "\n",
     "        # get city2\n",
-    "        city2 = None\n",
+    "        city2 = row['city2']\n",
     "\n",
     "        # get country2\n",
-    "        country2 = None\n",
+    "        country2 = row['country2']\n",
     "\n",
     "        # use get_country to find the predicted country2\n",
-    "        predicted_country2, _ = None\n",
+    "        predicted_country2, _ = get_country(city1, country1, city2, word_embeddings, cosine_similarity=cosine_similarity)\n",
     "\n",
     "        # if the predicted country2 is the same as the actual country2...\n",
     "        if predicted_country2 == country2:\n",
     "            # increment the number of correct by 1\n",
-    "            num_correct += None\n",
+    "            num_correct += 1\n",
     "\n",
     "    # get the number of rows in the data dataframe (length of dataframe)\n",
     "    m = len(data)\n",
     "\n",
     "    # calculate the accuracy by dividing the number correct by m\n",
-    "    accuracy = None\n",
+    "    accuracy = num_correct/m\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    return accuracy\n"
@@ -770,9 +789,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is 0.92\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = get_accuracy(word_embeddings, data)\n",
     "print(f\"Accuracy is {accuracy:.2f}\")"
@@ -789,9 +816,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w3_unittest.test_get_accuracy(get_accuracy, data)"
