--- a/Natural Language Processing with Classification and Vector Spaces/Week 4/Python Notebooks/C1_W4_Assignment.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 4/Python Notebooks/C1_W4_Assignment.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -521,28 +521,36 @@
     "    '''\n",
     "    ### START CODE HERE ###\n",
     "    # m is the number of rows in X\n",
-    "    m = None\n",
+    "    m,_ = X.shape\n",
     "        \n",
     "    # diff is XR - Y    \n",
-    "    diff = None\n",
+    "    diff = X@R-Y\n",
     "\n",
     "    # diff_squared is the element-wise square of the difference    \n",
-    "    diff_squared = None\n",
+    "    diff_squared = np.square(diff)\n",
     "\n",
     "    # sum_diff_squared is the sum of the squared elements\n",
-    "    sum_diff_squared = None\n",
+    "    sum_diff_squared = np.sum(diff_squared)\n",
     "\n",
     "    # loss i is the sum_diff_squared divided by the number of examples (m)\n",
-    "    loss = None\n",
+    "    loss = sum_diff_squared/m\n",
     "    ### END CODE HERE ###\n",
     "    return loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Expected loss for an experiment with random matrices: 8.1866\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing your implementation.\n",
     "np.random.seed(123)\n",
@@ -566,9 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_compute_loss(compute_loss)"
@@ -616,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,17 +641,17 @@
     "    '''\n",
     "    Inputs: \n",
     "        X: a matrix of dimension (m,n) where the columns are the English embeddings.\n",
-    "        Y: a matrix of dimension (m,n) where the columns correspong to the French embeddings.\n",
+    "        Y: a matrix of dimension (m,n) where the columns corresponding to the French embeddings.\n",
     "        R: a matrix of dimension (n,n) - transformation matrix from English to French vector space embeddings.\n",
     "    Outputs:\n",
     "        g: a scalar value - gradient of the loss function L for given X, Y and R.\n",
     "    '''\n",
     "    ### START CODE HERE ###\n",
     "    # m is the number of rows in X\n",
-    "    m = None\n",
+    "    m,_ = X.shape\n",
     "\n",
     "    # gradient is X^T(XR - Y) * 2/m    \n",
-    "    gradient = None\n",
+    "    gradient = X.T@(X@R-Y)*2/m\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return gradient"
@@ -643,9 +659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First row of the gradient matrix: [1.3498175  1.11264981 0.69626762 0.98468499 1.33828969]\n"
+     ]
+    }
+   ],
    "source": [
     "# Testing your implementation.\n",
     "np.random.seed(123)\n",
@@ -670,9 +694,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_compute_gradient(compute_gradient)"
@@ -770,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,22 +828,33 @@
     "            print(f\"loss at iteration {i} is: {compute_loss(X, Y, R):.4f}\")\n",
     "        ### START CODE HERE ###\n",
     "        # use the function that you defined to compute the gradient\n",
-    "        gradient = None\n",
+    "        gradient = compute_gradient(X,Y,R)\n",
     "\n",
     "        # update R by subtracting the learning rate times gradient\n",
-    "        R -= None\n",
+    "        R -= learning_rate*gradient\n",
     "        ### END CODE HERE ###\n",
     "    return R"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss at iteration 0 is: 3.7242\n",
+      "loss at iteration 25 is: 3.6283\n",
+      "loss at iteration 50 is: 3.5350\n",
+      "loss at iteration 75 is: 3.4442\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C6 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -840,9 +883,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_align_embeddings(align_embeddings)"
@@ -861,12 +912,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss at iteration 0 is: 963.0146\n",
+      "loss at iteration 25 is: 97.8292\n",
+      "loss at iteration 50 is: 26.8329\n",
+      "loss at iteration 75 is: 9.7893\n",
+      "loss at iteration 100 is: 4.3776\n",
+      "loss at iteration 125 is: 2.3281\n",
+      "loss at iteration 150 is: 1.4480\n",
+      "loss at iteration 175 is: 1.0338\n",
+      "loss at iteration 200 is: 0.8251\n",
+      "loss at iteration 225 is: 0.7145\n",
+      "loss at iteration 250 is: 0.6534\n",
+      "loss at iteration 275 is: 0.6185\n",
+      "loss at iteration 300 is: 0.5981\n",
+      "loss at iteration 325 is: 0.5858\n",
+      "loss at iteration 350 is: 0.5782\n",
+      "loss at iteration 375 is: 0.5735\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C7 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -980,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,31 +1074,41 @@
     "    # for each candidate vector...\n",
     "    for row in candidates:\n",
     "        # get the cosine similarity\n",
-    "        cos_similarity = None\n",
+    "        cos_similarity = cosine_similarity(v,row)\n",
     "\n",
     "        # append the similarity to the list\n",
     "        similarity_l.append(cos_similarity)\n",
     "\n",
     "    # sort the similarity list and get the indices of the sorted list    \n",
-    "    sorted_ids = None  \n",
+    "    sorted_ids = np.argsort(similarity_l) \n",
     "    \n",
     "    # Reverse the order of the sorted_ids array\n",
-    "    sorted_ids = None\n",
+    "    sorted_ids = sorted_ids[::-1]\n",
     "    \n",
     "    # get the indices of the k most similar candidate vectors\n",
-    "    k_idx = None\n",
+    "    k_idx = sorted_ids[0:k]\n",
     "    ### END CODE HERE ###\n",
     "    return k_idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 0 1]\n",
+      " [1 0 5]\n",
+      " [9 9 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C9 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -1048,9 +1132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_nearest_neighbor(nearest_neighbor)"
@@ -1080,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1190,7 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    # The prediction is X times R\n",
-    "    pred = None\n",
+    "    pred = X@R\n",
     "\n",
     "    # initialize the number correct to zero\n",
     "    num_correct = 0\n",
@@ -1106,15 +1198,15 @@
     "    # loop through each row in pred (each transformed embedding)\n",
     "    for i in range(len(pred)):\n",
     "        # get the index of the nearest neighbor of pred at row 'i'; also pass in the candidates in Y\n",
-    "        pred_idx = None\n",
+    "        pred_idx = nearest_neighbor(pred[i],Y, k=1, cosine_similarity=cosine_similarity)\n",
     "\n",
     "        # if the index of the nearest neighbor equals the row of i... \\\n",
     "        if pred_idx == i:\n",
     "            # increment the number correct by 1.\n",
-    "            num_correct += None\n",
+    "            num_correct += 1\n",
     "\n",
     "    # accuracy is the number correct divided by the number of rows in 'pred' (also number of rows in X)\n",
-    "    accuracy = None\n",
+    "    accuracy = num_correct/len(pred)\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1130,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,12 +1231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy on test set is 0.557\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C11 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -1170,9 +1270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.unittest_test_vocabulary(test_vocabulary)"
