--- a/Natural Language Processing with Classification and Vector Spaces/Week 4/Python Notebooks/C1_W4_Assignment.ipynb
+++ b/Natural Language Processing with Classification and Vector Spaces/Week 4/Python Notebooks/C1_W4_Assignment.ipynb
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,22 +1388,33 @@
     "\n",
     "    ### START CODE HERE ###\n",
     "    # process the document into a list of words (process the tweet)\n",
-    "    processed_doc = None\n",
+    "    processed_doc = process_tweet(tweet)\n",
     "    for word in processed_doc:\n",
     "        # add the word embedding to the running total for the document embedding\n",
-    "        doc_embedding = None\n",
+    "        doc_embedding += en_embeddings.get(word,0)\n",
     "    ### END CODE HERE ###\n",
     "    return doc_embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.00268555, -0.15378189, -0.55761719, -0.07216644, -0.32263184])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# UNQ_C13 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -1427,9 +1438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_get_document_embedding(get_document_embedding)"
@@ -1449,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,13 +1494,13 @@
     "\n",
     "        ### START CODE HERE ###\n",
     "        # get the document embedding of the tweet\n",
-    "        doc_embedding = None\n",
+    "        doc_embedding = get_document_embedding(doc, en_embeddings, process_tweet=process_tweet)\n",
     "\n",
     "        # save the document embedding into the ind2Tweet dictionary at index i\n",
-    "        ind2Doc_dict[i] = None\n",
+    "        ind2Doc_dict[i] = doc_embedding\n",
     "\n",
     "        # append the document embedding to the list of document vectors\n",
-    "        document_vec_l.append(None)\n",
+    "        document_vec_l.append(doc_embedding)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -1493,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,12 +1521,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of dictionary 10000\n",
+      "shape of document_vecs (10000, 300)\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C15 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -1529,9 +1557,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function. This cell may take some seconds to run.\n",
     "w4_unittest.test_get_document_vecs(get_document_vecs)"
@@ -1552,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,12 +1599,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@hanbined sad pray for me :(((\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C16 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -1613,9 +1657,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of vectors is 10000 and each has 300 dimensions.\n"
+     ]
+    }
+   ],
    "source": [
     "N_VECS = len(all_tweets)       # This many vectors.\n",
     "N_DIMS = len(ind2Tweet[1])     # Vector dimensionality.\n",
@@ -1637,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1755,26 +1807,26 @@
     "    # calculate the dot product between the vector and the matrix containing the planes\n",
     "    # remember that planes has shape (300, 10)\n",
     "    # The dot product will have the shape (1,10)    \n",
-    "    dot_product = None\n",
+    "    dot_product = np.dot(v,planes)\n",
     "        \n",
     "    # get the sign of the dot product (1,10) shaped vector\n",
-    "    sign_of_dot_product = None\n",
+    "    sign_of_dot_product = np.sign(dot_product)\n",
     "\n",
     "    # set h to be false (eqivalent to 0 when used in operations) if the sign is negative,\n",
     "    # and true (equivalent to 1) if the sign is positive (1,10) shaped vector\n",
     "    # if the sign is 0, i.e. the vector is in the plane, consider the sign to be positive\n",
-    "    h = None\n",
+    "    h = sign_of_dot_product>0\n",
     "\n",
     "    # remove extra un-used dimensions (convert this from a 2D to a 1D array)\n",
-    "    h = None\n",
+    "    h = np.squeeze(h)\n",
     "\n",
     "    # initialize the hash value to 0\n",
     "    hash_value = 0\n",
     "\n",
-    "    n_planes = None\n",
+    "    n_planes = planes.shape[1]\n",
     "    for i in range(n_planes):\n",
     "        # increment the hash value by 2^i * h_i        \n",
-    "        hash_value += None\n",
+    "        hash_value += np.power(2,i)*h[i] \n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1786,12 +1838,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The hash value for this vector, and the set of planes at index 0, is 768\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C18 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -1818,9 +1878,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_hash_value_of_vector(hash_value_of_vector)"
