uploaded new files

--- a/C1-Natural Language Processing with Classification and Vector Spaces/Week 4/Python Notebooks/C1_W4_Naive_Machine_Translation_Locality_Sensitive_Hashing_Assignment.ipynb
+++ b/C1-Natural Language Processing with Classification and Vector Spaces/Week 4/Python Notebooks/C1_W4_Naive_Machine_Translation_Locality_Sensitive_Hashing_Assignment.ipynb
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1410,7 +1410,7 @@
        "array([-0.00268555, -0.15378189, -0.55761719, -0.07216644, -0.32263184])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1512,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1826,7 @@
     "    n_planes = planes.shape[1]\n",
     "    for i in range(n_planes):\n",
     "        # increment the hash value by 2^i * h_i        \n",
-    "        hash_value += np.power(2,i)*h[i] \n",
+    "        hash_value += (2**i)*h[i] \n",
     "        \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1838,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deleteable": false,
     "editable": false
@@ -1988,12 +1988,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The hash table at key 0 has 1351 document vectors\n",
+      "The id table at key 0 has 1351 document indices\n",
+      "The first 5 document indices stored at key 0 of id table are [3, 8, 16, 18, 29]\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C20 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -2019,9 +2029,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_make_hash_table(make_hash_table)"
@@ -2045,9 +2063,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on hash universe #: 0\n",
+      "working on hash universe #: 1\n",
+      "working on hash universe #: 2\n",
+      "working on hash universe #: 3\n",
+      "working on hash universe #: 4\n",
+      "working on hash universe #: 5\n",
+      "working on hash universe #: 6\n",
+      "working on hash universe #: 7\n",
+      "working on hash universe #: 8\n",
+      "working on hash universe #: 9\n",
+      "working on hash universe #: 10\n",
+      "working on hash universe #: 11\n",
+      "working on hash universe #: 12\n",
+      "working on hash universe #: 13\n",
+      "working on hash universe #: 14\n",
+      "working on hash universe #: 15\n",
+      "working on hash universe #: 16\n",
+      "working on hash universe #: 17\n",
+      "working on hash universe #: 18\n",
+      "working on hash universe #: 19\n",
+      "working on hash universe #: 20\n",
+      "working on hash universe #: 21\n",
+      "working on hash universe #: 22\n",
+      "working on hash universe #: 23\n",
+      "working on hash universe #: 24\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating the hashtables\n",
     "def create_hash_id_tables(n_universes):\n",
@@ -2115,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,15 +2217,15 @@
     "            if new_id not in ids_to_consider_set:\n",
     "                # access document_vectors_l list at index i to get the embedding\n",
     "                # then append it to the list of vectors to consider as possible nearest neighbors\n",
-    "                document_vector_at_i = None\n",
-    "                None\n",
+    "                document_vector_at_i = document_vectors_l[i]\n",
+    "                vecs_to_consider_l.append(document_vector_at_i)\n",
     "\n",
     "                # append the new_id (the index for the document) to the list of ids to consider\n",
-    "                None\n",
+    "                ids_to_consider_l.append(new_id)\n",
     "\n",
     "                # also add the new_id to the set of ids to consider\n",
     "                # (use this to check if new_id is not already in the IDs to consider)\n",
-    "                None\n",
+    "                ids_to_consider_set.add(new_id)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "\n",
@@ -2198,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2210,12 +2260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fast considering 77 vecs\n"
+     ]
+    }
+   ],
    "source": [
     "# UNQ_C22 (UNIQUE CELL IDENTIFIER, DO NOT EDIT)\n",
     "# You do not have to input any code in this cell, but it is relevant to grading, so please do not change anything\n",
@@ -2227,9 +2285,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nearest neighbors for document 0\n",
+      "Document contents: #FollowFriday @France_Inte @PKuchly57 @Milipol_Paris for being top engaged members in my community this week :)\n",
+      "\n",
+      "Nearest neighbor at document id 51\n",
+      "document contents: #FollowFriday @France_Espana @reglisse_menthe @CCI_inter for being top engaged members in my community this week :)\n",
+      "Nearest neighbor at document id 2478\n",
+      "document contents: #ShareTheLove @oymgroup @musicartisthere for being top HighValue members this week :) @nataliavas http://t.co/IWSDMtcayt\n",
+      "Nearest neighbor at document id 105\n",
+      "document contents: #FollowFriday @straz_das @DCarsonCPA @GH813600 for being top engaged members in my community this week :)\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Nearest neighbors for document {doc_id}\")\n",
     "print(f\"Document contents: {doc_to_search}\")\n",
@@ -2242,9 +2316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fast considering 77 vecs\n",
+      "Fast considering 153 vecs\n",
+      "\u001b[92m All tests passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "w4_unittest.test_approximate_knn(approximate_knn, hash_tables, id_tables)"
